--- a/src/components/arrow-button/ArrowButton.module.scss
+++ b/src/components/arrow-button/ArrowButton.module.scss
@@ -10,7 +10,15 @@
 	flex-shrink: 0;
 	border-right: 1px;
 	background-color: #000;
-	transition: transform 0.5s ease;
+	transition: transform 0.5s ease, background-color 0.2s;
+}
+
+.container:hover {
+	background-color: #ffc802;
+}
+
+.container:active {
+	background-color: #787878;
 }
 
 .container_open {
