--- a/src/components/select/Select.module.scss
+++ b/src/components/select/Select.module.scss
@@ -39,7 +39,7 @@
 
 .selectWrapper:not([data-is-active='true'])
 	.placeholder:not([data-status='invalid']):hover {
-	outline: 3px solid #000;
+	outline: 3px solid #ffc802;
 }
 
 .select {
@@ -73,7 +73,11 @@
 }
 
 .option:hover {
-	background: var(--grey, #c4c4c4);
+	background: var(--grey, #eeeeee);
+}
+
+.option:active {
+	background: var(--grey, #d7d7d7);
 }
 
 @mixin option-color-before {
