--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -1,4 +1,4 @@
-.button {
+.reset_button {
 	cursor: pointer;
 	display: flex;
 	width: 210px;
@@ -10,10 +10,24 @@
 	border: 1px solid #000;
 }
 
-.button:active {
-	background: var(--gold, #ffc802);
+.reset_button:hover {
+	--font-color: #ffffff;
+	background: var(--gold, #000000);
 }
 
-.button:hover {
-	background: var(--gold, #ffc802);
+.submit_button {
+	cursor: pointer;
+	display: flex;
+	width: 210px;
+	height: 50px;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	box-sizing: border-box;
+	border: 1px solid #000000;
+	background-color: #ffc802;
+}
+
+.submit_button:hover {
+	background: var(--gold, #ffedab);
 }
